MDEV-33679 [poc] Construct queries for Item_equal in spider group by handler